# evmc

./: EVMC_8md_source.html  Host__Guide_8md_source.html  VM__Guide_8md_source.html  VM__Tester_8md_source.html  annotated.html  annotated_dup.js  classes.html  dir_5298d49f5985e350bcac49a99c9a871c.html  dir_5298d49f5985e350bcac49a99c9a871c.js  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  dir_d44c64559bbebec7f509842c48db8b23.html  evmc_8h_source.html  example__vm_8c.html  example__vm_8c.js  example__vm_8c_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  group__EVMC.html  group__EVMC.js  group__helpers.html  group__helpers.js  group__instructions.html  group__instructions.js  group__loader.html  group__loader.js  group__result__optional__storage.html  helpers_8h_source.html  helpers_8hpp.html  helpers_8hpp.js  helpers_8hpp_source.html  hostguide.html  index.html  instructions_8h_source.html  loader_8h_source.html  menudata.js  (+41 more)
docs/: EVMC.md
include/evmc/: evmc.h  evmc.hpp
lib/: CMakeLists.txt
lib/evmc/: CMakeLists.txt  evmc.cpp
